# sirup

./: .coveragerc  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tasks.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
sirup/: __init__.py
tests/: test_basic_data.py
