[metadata]
name = sirup
version = attr: sirup._version.__version__
description = MacOS automation tool
long_description = file: README.rst
license = Apache 2.0
url = https://github.com/rqelibari/sirup

author = Rezart Qelibari
author_email = rqelibari@users.noreply.github.com

classifiers =
    'Development Status :: 1 - Planning'
    'Environment :: Console'
    'Intended Audience :: Developers'
    'Intended Audience :: System Administrators'
    'License :: OSI Approved :: Apache Software License'
    'Operating System :: MacOS :: MacOS X'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3.6'
    'Topic :: Software Development'
    'Topic :: Software Development :: Build Tools'
    'Topic :: Software Development :: Libraries'
    'Topic :: Software Development :: Libraries :: Python Modules'
    'Topic :: System :: Software Distribution'
    'Topic :: System :: Systems Administration'


[options]
packages = find:
install_requires = invoke; invocations
setup_requires = pytest-runner; flake8
tests_require = pytest; pytest-cov

[options.extras_require]
docs = Sphinx


[aliases]
test = pytest

[flake8]
exclude = .git,build
max-line-length = 79

[tool:pytest]
addopts = --durations=5
python_files = tests/*
